        detailed documentation how messages from the backend process are buffered was added.
    [#] Changed debug messages in Observer's destructor to trace messages.
    [#] QtilitiesProperty is now properly documented.
    [#] Moved registration of Logger::MessageType and Logger::MessageContext from ITask to Logger's constructor.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".
    [*] Fixed possible crash in TreeIterator::last() when the TreeIterator was constructed with a null node.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] Added new generic property related classes: GenericPropertyBrowser, GenericPropertyPathEditor, GenericPropertyPathEditorListWrapper,
        FileEditorFactory and PathPropertyManager.
    [+] Added TaskSummaryWidget::getSingleTaskWidgetForTask().
    [+] WidgetLoggerFrontends now has the option to specify where and if toolbars with actions related to the
        displayed log should be shown.
    [+] Added TaskLogNoInitialization to the TaskLogInitialization enumeration in TaskManagerGui. This allows tasks to be used more efficiently in console applications.
    [+] Add ability to refresh icons in Mode Manager dynamically at runtime. See issue #96.

    [#] Slightly improved layout in SingleTaskWidget.

    [*] Fixed compilation issues against Qt5 when property browser is enable using DEFINES += QTILITIES_PROPERTY_BROWSER
    [*] Fixed bug where ProhibitDuplicateNamesCaseSensitive was not handled properly in NamingPolicyFilter::evaluateAttachment()

    ============================
    QtilitiesExtensionSystem:
    ============================

    ============================
    QtilitiesProjectManagement:
    ============================

    ============================
    QtilitiesTesting:
    ============================

    ============================