@@ -341,6 +341,16 @@ bool FileUtils::makeLocalCopyOfResource(const QString &resource_path, const QStr
         return false;
     }
 
+    QFileInfo fi(local_path);
+    QDir dir(fi.path());
+    if (!dir.exists()) {
+        if (!dir.mkpath(fi.path())) {
+            if (errorMsg)
+                *errorMsg = QString(tr("Failed to create target directory: %1. Resource file will not be copied.")).arg(fi.path());
+            return false;
+        }
+    }
+
     QFile local_file(local_path);
     if (local_file.exists()) {
         if (!local_file.remove()) {
@@ -351,7 +361,7 @@ bool FileUtils::makeLocalCopyOfResource(const QString &resource_path, const QStr
     }
     if (!resource_file.copy(local_path)) {
         if (errorMsg)
-            *errorMsg = QString(tr("Failed to create a copy of resource file: %1.")).arg(resource_path);
+            *errorMsg = QString(tr("Failed to create a copy of resource file: %1 -> %2")).arg(resource_path).arg(local_path);
         return false;
     } else {
         if (!QFile::setPermissions(local_path, local_permissions)) {
